--- a/day8/grid.ipynb
+++ b/day8/grid.ipynb
@@ -63,6 +63,7 @@
     "    def __init__(self, trees: List[List[bool]]):\n",
     "        self.trees_ : List[List[int]] = trees.copy()\n",
     "        self.visibility_ : Optional(List[List[bool]]) = None\n",
+    "        self.scores_ : Optional(List[List[int]]) = None\n",
     "    \n",
     "    def trees(self) -> List[List[int]]:\n",
     "        return self.trees_\n",
@@ -73,9 +74,6 @@
     "    def visibility(self) -> List[List[bool]]:\n",
     "        if self.visibility_:\n",
     "            return self.visibility_\n",
-    "        #self.visibility_ = self.edge_len() * [[True, *((self.edge_len() - 2) * [False]), True]]\n",
-    "        #self.visibility_[0] = self.edge_len() * [True]\n",
-    "        #self.visibility_[self.edge_len() - 1] = self.edge_len() * [True]\n",
     "        edge_len = self.edge_len()\n",
     "        v = []\n",
     "        for r in range(0, edge_len):\n",
@@ -126,12 +124,54 @@
     "                    self.visibility_[r][c] = True\n",
     "        return self.visibility_\n",
     "\n",
+    "    def scenic_score_tree(self, x, y):\n",
+    "        tree = self.trees_[x][y]\n",
+    "        edge_len = self.edge_len()\n",
+    "        n = 0\n",
+    "        e = 0\n",
+    "        s = 0\n",
+    "        w = 0\n",
+    "        for r in range(x - 1, -1, -1):\n",
+    "            n+=1\n",
+    "            if tree <= self.trees_[r][y]:\n",
+    "                break\n",
+    "        for r in range(x + 1, edge_len):\n",
+    "            s+=1\n",
+    "            if tree <= self.trees_[r][y]:\n",
+    "                break\n",
+    "        for c in range(y + 1, edge_len):\n",
+    "            e+=1\n",
+    "            if tree <= self.trees_[x][c]:\n",
+    "                break\n",
+    "        for c in range(y - 1, -1, -1):\n",
+    "            w+=1\n",
+    "            if tree <= self.trees_[x][c]:\n",
+    "                break\n",
+    "        return n * e * s * w\n",
+    "\n",
+    "    def scenic_score(self):\n",
+    "        if self.scores_:\n",
+    "            return self.scores_\n",
+    "        edge_len = self.edge_len()\n",
+    "        v = []\n",
+    "        for r in range(0, edge_len):\n",
+    "            row = []\n",
+    "            for c in range(0, edge_len):\n",
+    "                row.append(0)\n",
+    "            v.append(row)\n",
+    "        for r in range(0, edge_len):\n",
+    "            for c in range(0, edge_len):\n",
+    "                tree = self.trees_[r][c]\n",
+    "                v[r][c] = self.scenic_score_tree(r, c)\n",
+    "        self.scores_ = v\n",
+    "        return self.scores_\n",
+    "\n",
     "    def row(self, index : int) -> List[int]:\n",
     "        # Return a copy to be consistent with `column()`\n",
     "        return self.trees_[index].copy()\n",
     "\n",
     "    def column(self, index : int) -> List[int]:\n",
-    "        return self.trees_[index] \n",
+    "        return self.trees_[index]\n",
     "\n",
     "    "
    ]
@@ -143,7 +183,7 @@
    "outputs": [],
    "source": [
     "def get_testdata():\n",
-    "    return [os.path.join('testdata',f) for f in ['easy1.txt', 'easy2.txt', 'easy3.txt', 'easy4.txt', 'sample1.txt']]"
+    "    return [os.path.join('testdata',f) for f in ['easy1.txt', 'easy3.txt', 'easy4.txt', 'score-n.txt', 'score-e.txt', 'score-s.txt', 'score-w.txt', 'score-small.txt', 'sample1.txt']]"
    ]
   },
   {
@@ -177,14 +217,6 @@
       "[True, False, False, True]\n",
       "[True, False, False, True]\n",
       "[True, True, True, True]\n",
-      "[4, 4, 4, 4]\n",
-      "[3, 3, 3, 3]\n",
-      "[2, 2, 2, 2]\n",
-      "[1, 1, 1, 1]\n",
-      "[True, True, True, True]\n",
-      "[True, True, True, True]\n",
-      "[True, True, True, True]\n",
-      "[True, True, True, True]\n",
       "[1, 1, 1, 1, 1]\n",
       "[1, 9, 9, 9, 1]\n",
       "[1, 9, 0, 9, 1]\n",
@@ -205,6 +237,50 @@
       "[True, True, False, False, True]\n",
       "[True, False, False, False, True]\n",
       "[True, True, True, True, True]\n",
+      "[4, 4, 4, 4]\n",
+      "[3, 3, 3, 3]\n",
+      "[2, 2, 2, 2]\n",
+      "[1, 1, 1, 1]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "[True, True, True, True]\n",
+      "[True, False, True, True]\n",
+      "[True, False, False, True]\n",
+      "[True, True, True, True]\n",
+      "[1, 1, 1, 1]\n",
+      "[2, 2, 2, 2]\n",
+      "[3, 3, 3, 3]\n",
+      "[4, 4, 4, 4]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[True, True, True, True]\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[True, True, True, True]\n",
+      "[True, False, False, True]\n",
+      "[True, True, False, True]\n",
+      "[True, True, True, True]\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 2, 1]\n",
+      "[1, 1, 1, 3, 1, 1]\n",
+      "[1, 1, 4, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[True, True, True, True, True, True]\n",
+      "[True, False, False, False, False, True]\n",
+      "[True, False, False, False, True, True]\n",
+      "[True, False, False, True, False, True]\n",
+      "[True, False, True, False, False, True]\n",
+      "[True, True, True, True, True, True]\n",
       "[6, 5, 6, 6, 2, 5, 5, 5, 5]\n",
       "[3, 2, 6, 6, 4, 3, 3, 6, 6]\n",
       "[3, 3, 3, 3, 3, 5, 3, 4, 6]\n",
@@ -269,11 +345,170 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Part 2\n",
+    "\n",
+    "_How far can you see from each tree?_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forest testdata/easy1.txt, size 4\n",
+      "[1, 1, 1, 1]\n",
+      "[1, 0, 0, 1]\n",
+      "[1, 0, 0, 1]\n",
+      "[1, 1, 1, 1]\n",
+      "scores\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 1, 1, 0]\n",
+      "[0, 1, 1, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "forest testdata/easy3.txt, size 5\n",
+      "[1, 1, 1, 1, 1]\n",
+      "[1, 9, 9, 9, 1]\n",
+      "[1, 9, 0, 9, 1]\n",
+      "[1, 9, 9, 9, 1]\n",
+      "[1, 1, 1, 1, 1]\n",
+      "scores\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 2, 1, 0]\n",
+      "[0, 2, 1, 2, 0]\n",
+      "[0, 1, 2, 1, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "forest testdata/easy4.txt, size 5\n",
+      "[1, 4, 1, 4, 1]\n",
+      "[4, 2, 4, 2, 4]\n",
+      "[3, 3, 1, 3, 3]\n",
+      "[4, 4, 4, 4, 4]\n",
+      "[5, 5, 5, 5, 5]\n",
+      "scores\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 8, 1, 0]\n",
+      "[0, 4, 1, 4, 0]\n",
+      "[0, 3, 2, 3, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "forest testdata/score-n.txt, size 4\n",
+      "[4, 4, 4, 4]\n",
+      "[3, 3, 3, 3]\n",
+      "[2, 2, 2, 2]\n",
+      "[1, 1, 1, 1]\n",
+      "scores\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 2, 2, 0]\n",
+      "[0, 1, 1, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "forest testdata/score-e.txt, size 4\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n",
+      "scores\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 1, 2, 0]\n",
+      "[0, 1, 2, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "forest testdata/score-s.txt, size 4\n",
+      "[1, 1, 1, 1]\n",
+      "[2, 2, 2, 2]\n",
+      "[3, 3, 3, 3]\n",
+      "[4, 4, 4, 4]\n",
+      "scores\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 1, 1, 0]\n",
+      "[0, 2, 2, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "forest testdata/score-w.txt, size 4\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "scores\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 2, 1, 0]\n",
+      "[0, 2, 1, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "forest testdata/score-small.txt, size 6\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 2, 1]\n",
+      "[1, 1, 1, 3, 1, 1]\n",
+      "[1, 1, 4, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1]\n",
+      "scores\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 0]\n",
+      "[0, 1, 1, 1, 24, 0]\n",
+      "[0, 1, 1, 36, 1, 0]\n",
+      "[0, 1, 24, 1, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "forest testdata/sample1.txt, size 9\n",
+      "[6, 5, 6, 6, 2, 5, 5, 5, 5]\n",
+      "[3, 2, 6, 6, 4, 3, 3, 6, 6]\n",
+      "[3, 3, 3, 3, 3, 5, 3, 4, 6]\n",
+      "[2, 2, 2, 6, 4, 2, 3, 3, 6]\n",
+      "[5, 4, 2, 3, 4, 6, 3, 5, 2]\n",
+      "[4, 4, 5, 6, 2, 4, 4, 6, 3]\n",
+      "[2, 2, 4, 6, 5, 5, 5, 2, 2]\n",
+      "[2, 6, 6, 2, 2, 3, 4, 2, 2]\n",
+      "[3, 2, 3, 3, 6, 5, 2, 2, 5]\n",
+      "scores\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 12, 8, 6, 1, 1, 16, 0]\n",
+      "[0, 4, 3, 1, 1, 60, 1, 4, 0]\n",
+      "[0, 1, 1, 60, 8, 1, 2, 1, 0]\n",
+      "[0, 12, 1, 2, 6, 240, 1, 6, 0]\n",
+      "[0, 2, 16, 24, 1, 2, 5, 48, 0]\n",
+      "[0, 1, 2, 30, 12, 4, 24, 1, 0]\n",
+      "[0, 7, 36, 1, 1, 3, 8, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def exercise_views():\n",
+    "    for f in get_testdata():\n",
+    "        forest = load_data(f)\n",
+    "        print(f'forest {f}, size {forest.edge_len()}')\n",
+    "        for l in forest.trees():\n",
+    "            print(f'{l}')\n",
+    "        print('scores')\n",
+    "        for l in forest.scenic_score():\n",
+    "            print(f'{l}')\n",
+    "\n",
+    "exercise_views()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268912\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solve_views():\n",
+    "    forest = load_data('input.txt')\n",
+    "    v = forest.scenic_score()\n",
+    "    return max([max(r) for r in v])\n",
+    "\n",
+    "print(solve_views())"
+   ]
   }
  ],
  "metadata": {
