Day 9 part 2 solution.

--- a/day9/bridge.ipynb
+++ b/day9/bridge.ipynb
@@ -194,6 +194,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def follow(h : Point, t : Point) -> Point:\n",
+    "  \"\"\"\n",
+    "    Called after the head has moved. `h` is in the new position and `t` is\n",
+    "    in the previous position. Since the distance was 1 the tail can only be\n",
+    "    in specific positions relative to the head:\n",
+    "\n",
+    "    qq1pp\n",
+    "    q000p\n",
+    "    10H01\n",
+    "    r000s\n",
+    "    rr1ss\n",
+    "\n",
+    "    Legend:\n",
+    "      * 0, or H requires no move\n",
+    "      * 1 requires the obvious move of 1 along a single axis\n",
+    "      * p, q, r, or s require a diagonal move toward H\n",
+    "  \"\"\"\n",
+    "  inc = Point(0, 0)\n",
+    "\n",
+    "  match h - t:\n",
+    "    case (Point(1, 0) | Point(1, 1) | Point(0, 1) | Point(-1, 1)\n",
+    "      | Point(-1, 0) | Point(-1, -1) | Point(0, -1) | Point(1, -1)\n",
+    "      | Point(0, 0)):\n",
+    "      inc = Point(0, 0)\n",
+    "    case Point(-2, 0):\n",
+    "      inc = Point(-1, 0)\n",
+    "    case Point(2, 0):\n",
+    "      inc = Point(1, 0)\n",
+    "    case Point(0, -2):\n",
+    "      inc = Point(0, -1)\n",
+    "    case Point(0, 2):\n",
+    "      inc = Point(0, 1)\n",
+    "    # p\n",
+    "    case Point(-2, -1) | Point(-2, -2) | Point(-1, -2):\n",
+    "      inc = Point(-1, -1)\n",
+    "    # q\n",
+    "    case Point(2, -1) | Point(2, -2) | Point(1, -2):\n",
+    "      inc = Point(1, -1)\n",
+    "    # r\n",
+    "    case Point(2, 1) | Point(2, 2) | Point(1, 2):\n",
+    "      inc = Point(1, 1)\n",
+    "    # s\n",
+    "    case Point(-2, 1) | Point(-2, 2) | Point(-1, 2):\n",
+    "      inc = Point(-1, 1)\n",
+    "  return t + inc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -201,53 +254,6 @@
     "def make_tail(head : Path) -> Path:\n",
     "  \"\"\" Creates the path of all points for the tail to follow `head` around. \n",
     "  \"\"\"\n",
-    "\n",
-    "  def follow(h : Point, t : Point) -> Point:\n",
-    "    \"\"\"\n",
-    "      Called after the head has moved. `h` is in the new position and `t` is\n",
-    "      in the previous position. Since the distance was 1 the tail can only be\n",
-    "      in specific positions relative to the head:\n",
-    "\n",
-    "      qq1pp\n",
-    "      q000p\n",
-    "      10H01\n",
-    "      r000s\n",
-    "      rr1ss\n",
-    "\n",
-    "      Legend:\n",
-    "        * 0, or H requires no move\n",
-    "        * 1 requires the obvious move of 1 along a single axis\n",
-    "        * p, q, r, or s require a diagonal move toward H\n",
-    "    \"\"\"\n",
-    "    inc = Point(0, 0)\n",
-    "\n",
-    "    match h - t:\n",
-    "      case (Point(1, 0) | Point(1, 1) | Point(0, 1) | Point(-1, 1)\n",
-    "       | Point(-1, 0) | Point(-1, -1) | Point(0, -1) | Point(1, -1)\n",
-    "       | Point(0, 0)):\n",
-    "        inc = Point(0, 0)\n",
-    "      case Point(-2, 0):\n",
-    "        inc = Point(-1, 0)\n",
-    "      case Point(2, 0):\n",
-    "        inc = Point(1, 0)\n",
-    "      case Point(0, -2):\n",
-    "        inc = Point(0, -1)\n",
-    "      case Point(0, 2):\n",
-    "        inc = Point(0, 1)\n",
-    "      # p\n",
-    "      case Point(-2, -1) | Point(-2, -2) | Point(-1, -2):\n",
-    "        inc = Point(-1, -1)\n",
-    "      # q\n",
-    "      case Point(2, -1) | Point(2, -2) | Point(1, -2):\n",
-    "        inc = Point(1, -1)\n",
-    "      # r\n",
-    "      case Point(2, 1) | Point(2, 2) | Point(1, 2):\n",
-    "        inc = Point(1, 1)\n",
-    "      # s\n",
-    "      case Point(-2, 1) | Point(-2, 2) | Point(-1, 2):\n",
-    "        inc = Point(-1, 1)\n",
-    "    return t + inc\n",
-    "\n",
     "  tail = Path([])\n",
     "  for s in head.segments:\n",
     "    tail_current = tail.end_point()\n",
@@ -4646,6 +4652,40 @@
     "    print(f'{f}: Path {t}, unique {unique_positions(t)}')  \n",
     "  \n",
     "exercise_unique_positions()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2\n",
+    "\n",
+    "Same question but now the rope has 10 segments instead of 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2717\n"
+     ]
+    }
+   ],
+   "source": [
+    "def long_solver():\n",
+    "  h = load_data('input.txt')\n",
+    "  t = [h]\n",
+    "  for i in range(0, 9):\n",
+    "    t.append(make_tail(t[i]))\n",
+    "  print(f'{len(unique_positions(t[9]))}')  \n",
+    "  \n",
+    "long_solver()"
    ]
   }
  ],
