Day 10 part 2 solved.

--- a/day10/cycles.ipynb
+++ b/day10/cycles.ipynb
@@ -85,12 +85,19 @@
     "  cycle_counter: int = field(init=False, default=0)\n",
     "  program_counter: int = field(init=False, default=0)\n",
     "  watches: Dict[int, List[Callable]] = field(init=False, default_factory=dict)\n",
+    "  crt: Optional[Callable] = field(init=False, default=None)\n",
     "\n",
     "  def add_watch(self, cycle : int, watch : Callable):\n",
-    "    \"\"\" Add a function to call after `cycle` cycles.\"\"\"\n",
+    "    \"\"\" Add a function to call after `cycle` cycles.\n",
+    "    \"\"\"\n",
     "    if cycle not in self.watches.keys():\n",
     "      self.watches[cycle] = []\n",
     "    self.watches[cycle].append(watch)\n",
+    "\n",
+    "  def connect_crt(self, crt : Callable):\n",
+    "    \"\"\" The given CRT will be called every cycle.\n",
+    "    \"\"\"\n",
+    "    self.crt = crt\n",
     "  \n",
     "  def execute_instruction(self, instruction : Instruction):\n",
     "    if instruction.op_code == OpCode.ADDX:\n",
@@ -98,7 +105,7 @@
     "        raise Exception('ADDX requires an int operand.')\n",
     "      self.register += instruction.operand\n",
     "  \n",
-    "  def run(self, state: Dict[int, int]):\n",
+    "  def run(self, state: Dict[int, int], frame: List[str]):\n",
     "    current_instruction = self.program.instructions[self.program_counter]\n",
     "    current_instruction_completion_cycle = instruction_cycles(current_instruction)\n",
     "    while True:\n",
@@ -106,6 +113,8 @@
     "      if self.cycle_counter in self.watches.keys():\n",
     "        for w in self.watches[self.cycle_counter]:\n",
     "          w(self, state)\n",
+    "      if self.crt:\n",
+    "        self.crt(self, frame)\n",
     "      if self.cycle_counter == current_instruction_completion_cycle:\n",
     "        self.execute_instruction(current_instruction)\n",
     "        self.program_counter += 1\n",
@@ -154,7 +163,7 @@
     "  for c in inspect_cycles:\n",
     "    cpu.add_watch(c, save_signal_strength)\n",
     "  state = dict()\n",
-    "  cpu.run(state)\n",
+    "  cpu.run(state, [])\n",
     "  print(sum(state.values()))"
    ]
   },
@@ -164,21 +173,93 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m solver(\u001b[39m'\u001b[39;49m\u001b[39minput.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn[5], line 10\u001b[0m, in \u001b[0;36msolver\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      8\u001b[0m   cpu\u001b[39m.\u001b[39madd_watch(c, save_signal_strength)\n\u001b[1;32m      9\u001b[0m state \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m()\n\u001b[0;32m---> 10\u001b[0m cpu\u001b[39m.\u001b[39;49mrun(state)\n\u001b[1;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39m(state\u001b[39m.\u001b[39mvalues()))\n",
-      "Cell \u001b[0;32mIn[3], line 34\u001b[0m, in \u001b[0;36mCpu.run\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m     32\u001b[0m   \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprogram_counter \u001b[39m>\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprogram\u001b[39m.\u001b[39minstructions):\n\u001b[1;32m     33\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m   current_instruction \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprogram\u001b[39m.\u001b[39;49minstructions[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprogram_counter]\n\u001b[1;32m     35\u001b[0m   current_instruction_completion_cycle \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m instruction_cycles(current_instruction)\n\u001b[1;32m     36\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcycle_counter \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15140\n"
      ]
     }
    ],
    "source": [
     "solver('input.txt')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2\n",
+    "\n",
+    "Very convoluted description about the operation of a CRT ...\n",
+    "\n",
+    "* 40 pixels wide x 6 pixels tall\n",
+    "* signal only indicates an offset, top row is followed by second, etc\n",
+    "* row of pixels 0 - 39\n",
+    "* CRT draws a single pixel during each clock cycle\n",
+    "\n",
+    "```\n",
+    "Cycle   1 -> ######################################## <- Cycle  40\n",
+    "Cycle  41 -> ######################################## <- Cycle  80\n",
+    "Cycle  81 -> ######################################## <- Cycle 120\n",
+    "Cycle 121 -> ######################################## <- Cycle 160\n",
+    "Cycle 161 -> ######################################## <- Cycle 200\n",
+    "Cycle 201 -> ######################################## <- Cycle 240\n",
+    "```\n",
+    "\n",
+    "* Presumably the pattern repeats starting at cycle 241?\n",
+    "* CPU register (`X`) sets the horizontal position of the middle of a sprite\n",
+    "* Sprite is 3 pixels wide x 1 pixel tall\n",
+    "\n",
+    "Plan:\n",
+    "* add another callback to the CPU just like the watch callbacks but running every cycle\n",
+    "* instead of passing in state, pass in a representation of the screen\n",
+    "* supplied callback can manipulate the frame to draw the pixel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crt_solver(filename : str):\n",
+    "  def render(cpu: Cpu, frame: List[str]):\n",
+    "    pixel = cpu.cycle_counter - 1\n",
+    "    if pixel % 40 in [cpu.register - 1, cpu.register, cpu.register + 1]:\n",
+    "      frame[pixel] = '#'\n",
+    "  program = load_data(filename)\n",
+    "  cpu = Cpu(program)\n",
+    "  cpu.connect_crt(render)\n",
+    "  state = dict()\n",
+    "  # This should be 240 but the input counts up to just past that.\n",
+    "  frame = ['.'] * 250\n",
+    "  cpu.run(state, frame)\n",
+    "  output = ''.join(frame)\n",
+    "  for i in range(0, 240, 40):\n",
+    "    print(output[i:i+40])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###..###....##..##..####..##...##..###..\n",
+      "#..#.#..#....#.#..#....#.#..#.#..#.#..#.\n",
+      "###..#..#....#.#..#...#..#....#..#.#..#.\n",
+      "#..#.###.....#.####..#...#.##.####.###..\n",
+      "#..#.#....#..#.#..#.#....#..#.#..#.#....\n",
+      "###..#.....##..#..#.####..###.#..#.#....\n"
+     ]
+    }
+   ],
+   "source": [
+    "crt_solver('input.txt')"
    ]
   },
   {
